# Cmaketest

./: CMakeLists.txt  sdl2-config.cmake
src/: main.cpp
